--- a/checkout.html
+++ b/checkout.html
@@ -122,15 +122,22 @@
                                 <div class="cart-summary-detail mb-24">
                                     <div class="productos border-bottom">
                                       <!-- aqui van productos -->
+                                      <table class="table table-bordered text-center mt-3 order-summary">
+                                        <thead class="table-dark">
+                                            <tr>
+                                                <th>Producto</th>
+                                                <th>Cantidad</th>
+                                                <th>Precio</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
                                     </div>
                                     <div class="d-flex justify-content-between align-items-center mb-24">
                                         <p class="lead color-black">VALOR DOMICILIO</p>
                                         <p class="lead valor-domi">$5.00</p>
                                     </div>
-                                    <div class="d-flex justify-content-between align-items-center mb-24">
-                                      <p class="lead color-black">Ciudad DOMICILIO</p>
-                                      <p class="lead destino">$5.00</p>
-                                  </div>
                                     <div class="d-flex justify-content-between align-items-center mb-24">
                                         <p class="lead color-black">DESCUENTO PROMO</p>
                                         <p class="lead promo">$5.00</p>
@@ -163,14 +170,14 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <button type="button" class="btn-checkout cus-btn dark w-100">
+                                <a href="thankyou.html" class="btn-checkout cus-btn dark w-100">
                                     <span class="icon-wrapper">
                                         <svg class="icon-svg icon-svg-copy" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                             <path d="M16.2522 11.9789C14.4658 10.1925 13.7513 6.14339 15.6567 4.23792M15.6567 4.23792C14.565 5.3296 11.4885 7.21521 7.91576 3.64246M15.6567 4.23792L4.34301 15.5516" stroke="#FCFDFD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                         </svg>
                                     </span>
-                                    Place Order
-                                </button>
+                                    Pagar Orden
+                                </a>
                             </div>
                         </div>
                     </div>
